feat: add personal-info card

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,39 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Alena Kharytonchyk</title>
 </head>
+
 <body>
-    
+    <section>
+        <header class="card">
+            <div class="personal-info">
+                <h1 class="full-name">
+                    Alena Kharytonchyk
+                </h1>
+                <h2 class="job-title">
+                    <span>Front-end developer</span>
+                    <span class="delimiter">|</span>
+                    <span class="prev-job">Business-analyst</span>
+                </h2>
+                <ul class="contact-info">
+                    <li><i class="fas fa-map-marker-alt"></i>Minsk, Belarus</li>
+                    <li><i class="fas fa-mobile-alt"></i>(+375)29-255-11-14</li>
+                    <li><a href="mailto:alena.kharytonchyk@outlook.com" title="Mail me"><i class="far fa-envelope"></i>alena.kharytonchyk@outlook.com</a></li>
+                </ul>
+                <ul class="socmedia">
+                    <li><a href="https://github.com/AlenaKharytonchyk" title="My githab" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.facebook.com/lenkaal" title="My facebook" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/alena-kharytonchyk-aleinikova-82504390/" title="My LinkedIn"
+                            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+            </div>
+            <div class="avatar">
+                <img src="./img/alena_foto.jpg" alt="Pretty girl is supposed to be here" width="400px">
+            </div>
+        </header>
+        <article class="card">
+
+        </article>
+    </section>
 </body>
+
 </html>
