feat: add information to all tabs

--- a/index.html
+++ b/index.html
@@ -112,6 +112,174 @@
 
                 </div>
             </article>
+            <article>
+                <div class="tab-skills">
+                    <div class="grid">
+                        <div class="grid-item">
+                            HTML
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            CSS
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            JS
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            VS Code
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            Git
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            MS Excel
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            MS Powepoint
+                        </div>
+                        <div class="level-five grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                        </div>
+                        <div class="grid-item">
+                            English level
+                        </div>
+                        <div class="grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item">
+                            Communication skills
+                        </div>
+                        <div class="level-seven grid-item">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="tab-projects">
+                    <p>No projects yet</p>
+                </div>
+            </article>
+            <article>
+                <div class="tab-ba">
+                    <div class="grid-ba">
+                        <div class="grid-item-ba">09.2010-till now</div>
+                        <div class="grid-item-ba"><b>The Mobile TeleSystems</b> Joint Limited Liability Company<br>
+                            Business Analysis Dept <br>
+                            <b>Leading Marketing Specialist </b><br></div>
+                        <div class="grid-item-ba"><b>Responsibilities:</b><br>
+                            <ul>
+                                <li> Forecast formation, preparation of models and presentations in the business
+                                    planning process</li>
+                                <li> Budget revenues forecast preparation</li>
+                                <li> Preparation of materials for the execution of the budget</li>
+                                <li> Analysis of the market situation and the behavior of competitors</li>
+                                <li> Analysis of the behavior of subscribers, post-analyzes of promotional offers</li>
+                                <li> Creation of models of analysis in the presentation of SAS Enterprise Guide</li>
+                                <li> Record keeping</li>
+                            </ul>
+                        </div>
+                        <div class="grid-item-ba">09.2008-12.2009</div>
+                        <div class="grid-item-ba"><b>The Mobile TeleSystems</b> Joint Limited Liability Company<br>
+                            Reference and Information Department<br>
+                            <b>Consultant</b><br></div>
+                        <div class="grid-item-ba">
+                            <ul><b>Responsibilities:</b>
+                                <li>Advising clients on the services of the company</li>
+                            </ul>
+                        </div>
+
+
+                    </div>
+                </div>
+            </article>
+            <article>
+                <div class="tab-feedback">
+                    <form method="post" enctype="text/plain" action="mailto:alena.kharytonchyk@outlook.com">
+                        <p class="feedback-text"><label for="firstname">First name:</label></p>
+                        <input type="text" name="firstname" required>
+                        <p class="feedback-text"><label for="lastname">Last name:</label></p>
+                        <input type="text" name="lastname" required>
+                        <p class="feedback-text"> Do you like the page?</p>
+                        <label class="container">
+                            <input type="radio" value="yes" name="selection" required>Yes
+                            <span class="checkmark"></span></label>
+                        <label class="container">
+                            <input type="radio" value="mostly" name="selection"> Mostly
+                            <span class="checkmark"></span></label>
+                        <label class="container">
+                            <input type="radio" value="no" name="selection"> No
+                            <span class="checkmark"></span></label>
+
+                        <p class="feedback-text">Will you give me a chance as a front-end developer?</p>
+                        <label class="container">
+                            <input type="radio" value="yes" name="chance" required> Yes
+                            <span class="checkmark"></span></label>
+                        <label class="container">
+                            <input type="radio" value="not sure" name="chance"> Not sure
+                            <span class="checkmark"></span></label>
+                        <label class="container">
+                            <input type="radio" value="no" name="chance"> No
+                            <span class="checkmark"></span></label>
+                        <p></p>
+
+                        <button type="submit">For any questions email me</button>
+                    </form>
+                </div>
+            </article>
         </section>
 
     </section>
