feat: update html markup. add skill description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <article>
 
                 <div class="tab-edu">
-                    <div class="grid">
+                    <div class="grid grid-1-2">
                         <div class="date grid-item">
                             09.2005-05.2010
                         </div>
@@ -114,7 +114,7 @@
             </article>
             <article>
                 <div class="tab-skills">
-                    <div class="grid">
+                    <div class="grid grid-1-2-3">
                         <div class="grid-item">
                             HTML
                         </div>
@@ -124,6 +124,9 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item comment">
+                            <p></p>
                         </div>
                         <div class="grid-item">
                             CSS
@@ -135,6 +138,9 @@
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
                         </div>
+                        <div class="grid-item comment">
+                            <p></p>
+                        </div>
                         <div class="grid-item">
                             JS
                         </div>
@@ -144,6 +150,9 @@
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item comment">
+                            <p></p>
                         </div>
                         <div class="grid-item">
                             VS Code
@@ -155,6 +164,9 @@
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
                         </div>
+                        <div class="grid-item comment">
+                            <p></p>
+                        </div>
                         <div class="grid-item">
                             Git
                         </div>
@@ -164,6 +176,9 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                             <span class="fa fa-star"></span>
+                        </div>
+                        <div class="grid-item comment">
+                            <p></p>
                         </div>
                         <div class="grid-item">
                             MS Excel
@@ -175,6 +190,9 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                         </div>
+                        <div class="grid-item comment">
+                            <p></p>
+                        </div>
                         <div class="grid-item">
                             MS Powepoint
                         </div>
@@ -184,6 +202,9 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
+                        </div>
+                        <div class="grid-item comment">
+                            <p></p>
                         </div>
                         <div class="grid-item">
                             English level
@@ -195,15 +216,21 @@
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star"></span>
                         </div>
+                        <div class="grid-item comment">
+                            <p></p>
+                        </div>
                         <div class="grid-item">
                             Communication skills
                         </div>
-                        <div class="level-seven grid-item">
+                        <div class="grid-item">
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
+                        </div>
+                        <div class="grid-item comment">
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -215,12 +242,12 @@
             </article>
             <article>
                 <div class="tab-ba">
-                    <div class="grid-ba">
-                        <div class="grid-item-ba">09.2010-till now</div>
-                        <div class="grid-item-ba"><b>The Mobile TeleSystems</b> Joint Limited Liability Company<br>
+                    <div class="grid grid-1-2-3">
+                        <div class="grid-item">09.2010-till now</div>
+                        <div class="grid-item"><b>The Mobile TeleSystems</b> Joint Limited Liability Company<br>
                             Business Analysis Dept <br>
                             <b>Leading Marketing Specialist </b><br></div>
-                        <div class="grid-item-ba"><b>Responsibilities:</b><br>
+                        <div class="grid-item"><b>Responsibilities:</b><br>
                             <ul>
                                 <li> Forecast formation, preparation of models and presentations in the business
                                     planning process</li>
@@ -232,11 +259,11 @@
                                 <li> Record keeping</li>
                             </ul>
                         </div>
-                        <div class="grid-item-ba">09.2008-12.2009</div>
-                        <div class="grid-item-ba"><b>The Mobile TeleSystems</b> Joint Limited Liability Company<br>
+                        <div class="grid-item">09.2008-12.2009</div>
+                        <div class="grid-item"><b>The Mobile TeleSystems</b> Joint Limited Liability Company<br>
                             Reference and Information Department<br>
                             <b>Consultant</b><br></div>
-                        <div class="grid-item-ba">
+                        <div class="grid-item">
                             <ul><b>Responsibilities:</b>
                                 <li>Advising clients on the services of the company</li>
                             </ul>
