feat: add footer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             </nav>
             <article>
                 <div class="tab-summary">
-                    <p>Summary placeholder</p>
+                    <p>I'm beginner front-end developer, who is admired with this area, interested in
+                        new knowleges and 
+                    </p>
                 </div>
             </article>
             <article>
@@ -295,7 +297,7 @@
                         <label class="container">
                             <input type="radio" value="yes" name="chance" required> Yes
                             <span class="checkmark"></span></label>
-                        <label class="container">
+                yu       <label class="container">
                             <input type="radio" value="not sure" name="chance"> Not sure
                             <span class="checkmark"></span></label>
                         <label class="container">
@@ -308,8 +310,10 @@
                 </div>
             </article>
         </section>
-
     </section>
+    <footer>
+         <p>Posted by: Alena Kharytonchyk  |  Contact me: <a href="mailto:alena.kharytonchyk@outlook.com" title="mail me"><i class="far fa-envelope"></i></a></p>   
+    </footer>
 </body>
 
 </html>
