fix: join tab summary and tab education

--- a/index.html
+++ b/index.html
@@ -51,16 +51,14 @@
         </header>
         <section class="card tab-nav">
 
-            <input id="tab-summary" type="radio" name="tab" checked="checked" />
-            <input id="tab-edu" type="radio" name="tab" />
+            <input id="tab-edu" type="radio" name="tab" checked="checked" />
             <input id="tab-skills" type="radio" name="tab" />
             <input id="tab-projects" type="radio" name="tab" />
             <input id="tab-ba" type="radio" name="tab" />
             <input id="tab-feedback" type="radio" name="tab" />
             <nav>
                 <ul>
-                    <li class="tab-summary"><label for="tab-summary">Summary</label></li>
-                    <li class="tab-edu"><label for="tab-edu">Education</label></li>
+                    <li class="tab-edu"><label for="tab-edu">Summary & Education</label></li>
                     <li class="tab-skills"><label for="tab-skills">Skills</label></li>
                     <li class="tab-projects"><label for="tab-projects">Projects</label></li>
                     <li class="tab-ba"><label for="tab-ba">Background</label></li>
@@ -68,15 +66,14 @@
                 </ul>
             </nav>
             <article>
-                <div class="tab-summary">
-                    <p>I'm beginner front-end developer, who is admired with this area, interested in
-                        new knowleges and 
-                    </p>
-                </div>
-            </article>
-            <article>
-
                 <div class="tab-edu">
+                    <h3>Summary</h3>
+                    <p>I'm a self-taught front-end developer who is making first steps in this domain. I'm passionate
+                        about creating html-pages and working on layout and usability.
+                        I also have a teachable attitude and a desire to learn (as evidenced by my continued
+                        self-study).Looking for possibilities to gain new knowledge and professional experience.
+                    </p>
+                    <h3>Education</h3>
                     <div class="grid grid-1-2">
                         <div class="date grid-item">
                             09.2005-05.2010
@@ -91,6 +88,18 @@
                         </div>
                         <div class="grid-item">
                             <b>JavaScript Development</b> by The Rolling Scopes School
+                        </div>
+                        <div class="date grid-item">
+                            09.2018-09.2018
+                        </div>
+                        <div class="grid-item">
+                            <b>Introduction to HTML</b> by Codecademy
+                        </div>
+                        <div class="date grid-item">
+                            09.2018-09.2018
+                        </div>
+                        <div class="grid-item">
+                            <b>Learn CSS</b> by Codecademy
                         </div>
                         <div class="date grid-item">
                             11.2017
@@ -128,7 +137,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> get Edx, Codecademy & Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             CSS
@@ -141,7 +150,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> get Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             JS
@@ -154,7 +163,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> get Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             VS Code
@@ -167,7 +176,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> get Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             Git
@@ -180,7 +189,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> get Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             MS Excel
@@ -193,7 +202,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> hands on experience for more than 5 years</p>
                         </div>
                         <div class="grid-item">
                             MS Powepoint
@@ -206,7 +215,7 @@
                             <span class="fa fa-star checked"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> hands on experience for more than 5 years</p>
                         </div>
                         <div class="grid-item">
                             English level
@@ -219,7 +228,8 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p></p>
+                            <p> International House (Upper intermediate) 07.2003-08.2006 </p>
+                            <p> BSUIR courses – "Translator-interpreter" 09.2007-04.2008</p>
                         </div>
                         <div class="grid-item">
                             Communication skills
@@ -239,7 +249,9 @@
             </article>
             <article>
                 <div class="tab-projects">
-                    <p>No projects yet</p>
+                    <p>I currently don't have any projects. Accept the page you are looking at.</p>
+                    <p>The examples of my code you can find hear:</p>
+                    <a href="https://github.com/AlenaKharytonchyk" title="My githab" target="_blank"><i class="fab fa-github"></i>github.com/AlenaKharytonchyk</a>
                 </div>
             </article>
             <article>
@@ -297,7 +309,7 @@
                         <label class="container">
                             <input type="radio" value="yes" name="chance" required> Yes
                             <span class="checkmark"></span></label>
-                yu       <label class="container">
+                        yu <label class="container">
                             <input type="radio" value="not sure" name="chance"> Not sure
                             <span class="checkmark"></span></label>
                         <label class="container">
@@ -312,7 +324,8 @@
         </section>
     </section>
     <footer>
-         <p>Posted by: Alena Kharytonchyk  |  Contact me: <a href="mailto:alena.kharytonchyk@outlook.com" title="mail me"><i class="far fa-envelope"></i></a></p>   
+        <p>Posted by: Alena Kharytonchyk | Contact me: <a href="mailto:alena.kharytonchyk@outlook.com" title="mail me"><i
+                    class="far fa-envelope"></i></a></p>
     </footer>
 </body>
 
