fix: change header layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </div>
             <div class="avatar">
-                <img src="./img/alena_foto.jpg" alt="Pretty girl is supposed to be here" width="400px">
+                <img src="./img/alena_foto_sqr_small.jpg" alt="Pretty girl is supposed to be here">
             </div>
         </header>
         <section class="card tab-nav">
@@ -309,7 +309,7 @@
                         <label class="container">
                             <input type="radio" value="yes" name="chance" required> Yes
                             <span class="checkmark"></span></label>
-                        yu <label class="container">
+                        <label class="container">
                             <input type="radio" value="not sure" name="chance"> Not sure
                             <span class="checkmark"></span></label>
                         <label class="container">
