"fix: text editor"

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h2 class="job-title">
                     <span>Front-end developer</span>
                     <span class="delimiter">|</span>
-                    <span class="prev-job">Business-analyst</span>
+                    <span class="prev-job">Business analyst</span>
                 </h2>
                 <ul class="contact-info">
                     <li><i class="fas fa-map-marker-alt"></i>Minsk, Belarus</li>
@@ -69,7 +69,7 @@
                 <div class="tab-edu">
                     <h3>Summary</h3>
                     <p>I'm a self-taught front-end developer who is making first steps in this domain. I'm passionate
-                        about creating html-pages and working on layout and usability.
+                        about creating HTML pages and working on layout and usability.
                         I also have a teachable attitude and a desire to learn (as evidenced by my continued
                         self-study).Looking for possibilities to gain new knowledge and professional experience.
                     </p>
@@ -163,7 +163,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p> get Rolling Scopes School courses</p>
+                            <p> take Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             VS Code
@@ -176,7 +176,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p> get Rolling Scopes School courses</p>
+                            <p> take Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             Git
@@ -189,7 +189,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p> get Rolling Scopes School courses</p>
+                            <p> take Rolling Scopes School courses</p>
                         </div>
                         <div class="grid-item">
                             MS Excel
@@ -202,7 +202,7 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p> hands on experience for more than 5 years</p>
+                            <p> hands-on experience for more than 5 years</p>
                         </div>
                         <div class="grid-item">
                             MS Powepoint
@@ -215,7 +215,7 @@
                             <span class="fa fa-star checked"></span>
                         </div>
                         <div class="grid-item comment">
-                            <p> hands on experience for more than 5 years</p>
+                            <p> hands-on experience for more than 5 years</p>
                         </div>
                         <div class="grid-item">
                             English level
@@ -249,8 +249,8 @@
             </article>
             <article>
                 <div class="tab-projects">
-                    <p>I currently don't have any projects. Accept the page you are looking at.</p>
-                    <p>The examples of my code you can find hear:</p>
+                    <p>Currently, I have no finished projects except for this page.</p>
+                    <p>The examples of my code you can find here:</p>
                     <a href="https://github.com/AlenaKharytonchyk" title="My githab" target="_blank"><i class="fab fa-github"></i>github.com/AlenaKharytonchyk</a>
                 </div>
             </article>
