fix: remove unused files

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </div>
             <div class="avatar">
-                <img src="./img/alena_foto_sqr_small.jpg" alt="Pretty girl is supposed to be here">
+                <img src="./img/avatar.jpg" alt="Pretty girl is supposed to be here">
             </div>
         </header>
         <section class="card tab-nav">
